objects/DE_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DE_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Recipients__c</fullName>
        <label>Additional Email Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_Count__c</fullName>
        <label>Attachment Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_Notes__c</fullName>
        <label>Deployment Engineering Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Engineer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Standard Users can be selected as Deployment Engineers</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>DE_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Account_Team__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email To Account Team?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Case_Owners__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email To Case Owners?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_DE_Team__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email To DE Team?</label>
        <type>Checkbox</type>
    </fields>
    <label>Deployment Engineering Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Deployment Engineering Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Engineering Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DE_Note_creation_when_DE_is_not_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),
     Account_Name__r.Deployment_Engineering__c = false)</errorConditionFormula>
        <errorMessage>DE Notes can be created only when Deployment Engineering is checked on Account</errorMessage>
    </validationRules>
</CustomObject>